--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,10 @@
 	min-height: 70px;
 }
 
+.btn-link {
+	color: #169990;
+}
+
 .images {
   text-align: center;
 }
@@ -188,8 +192,7 @@
 
 
 p {
-  text-indent: 25px;
-  font-size: 12pt;
+	font-size: 12pt;
 }
 
 .no-indent {
