Ajuste botão sair no mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,12 +44,24 @@
 /*************************
 	NAVIGATION
 *********/
+.navbar-header {
+  width: 100%;
+  height: 70px;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  position: relative;
+}
 
 .navbar-primary {
 	background: #FFF;
 	border-bottom: 1px solid #4a5661;
 }
 
+.navbar-logout {
+  position: absolute;
+  right: 0;
+  top: 16px;
+}
 .navbar-static-top {
 	-webkit-box-shadow: 0 1px 3px rgba(26,26,26,.14), 0 1px 3px rgba(26,26,26,.24);
     -moz-box-shadow: 0 1px 3px rgba(26,26,26,.14),0 1px 3px rgba(26,26,26,.24);
