--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,6 @@ body{
 body::after{
     content:'';
     display:block;
-    height:100px;
 }
 
 /*************************
@@ -77,6 +76,15 @@ body::after{
 /*************************
 	TOP BAR MENU
 *********/
+.navbar-header img {
+  max-width: 100%;
+  height: auto;
+}
+
+.navbarassinante {
+  border-bottom: 1px solid #000;
+}
+
 .topbar-menu {
   background-color: #169990;
 }
@@ -100,6 +108,257 @@ body::after{
 #topnav .navigation-menu > li > a:active {
   background: #007563;
 }
+
+.btn-pattern {
+  background: #169990;
+  color: #fff;
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  padding: 5px 20px;
+  transition: background .25s ease-in-out;
+  -moz-transition: background .25s ease-in-out;
+  -webkit-transition: background .25s ease-in-out;
+}
+
+.btn-pattern:hover {
+  background: #007563;
+  color: #fff;
+}
+
+.main-ad {
+  margin: 15px 0;
+  text-align: center;
+}
+
+/*************************
+	SELECIONAR PERIODO
+*********/
+
+.periodselect {
+  width: 100%;
+  background: #F3F3F3;
+  padding: 10px 15px;
+  margin: 15px 0;
+  border-radius: 5px;
+  min-height: 60px;
+}
+
+.periodselect__right {
+  float: right;
+}
+
+.periodselect-title {
+  color: #000;
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  font-size: 1.23em;
+  padding: 8px 0;
+}
+
+.datarangerform {
+  background: none;
+  border: 0;
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  color: #000;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  width: 170px;
+  padding-top: 8px;
+}
+
+.datarangerform:hover {
+  cursor: pointer;
+  color: #169990;
+}
+
+.periodselect button {
+  background: none;
+  border: 0;
+  color: #169990;
+  font-size: 1.5em;
+  padding: 5px 10px;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
+}
+
+.periodselect button:hover {
+  background: #169990;
+  color: #fff;
+  border: 0;
+}
+
+.formitem {
+  float: left;
+  padding: 0 30px;
+  border-right: 1px solid #169990;
+  height: 40px;
+}
+
+.formitem__last {
+  border-right: 0;
+  padding-right: 0;
+}
+
+.formitem select {
+  background: none;
+  border: 0;
+  font-size: 1.2em;
+  width: 170px;
+  color: #000;
+  padding-top: 7px;
+  font-family: roboto-condesed-regular, arial, sans-serif;
+}
+/*************************/
+
+/*************************
+	LISTA DE CLASSIFICADOS
+*********/
+
+.classificadoslista {
+  margin: 30px 0 15px;
+}
+
+.classificadoslista-title {
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  color: #169990;
+  font-size: 2em;
+  padding: 0;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.classificadoslista-buttons {
+  padding: 10px 0;
+}
+
+.classificadoslista-buttons ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.classificadoslista-buttons ul li {
+  display: inline-block;
+}
+
+.classificadoslista-buttons ul li:first-child {
+  margin-right: 5px;
+}
+
+.classificadoslista-buttons ul li button {
+  border: 1px solid #000;
+  background: #fff;
+  color: #000;
+  border-radius: 5px;
+  padding: 8px 11px;
+  -moz-transition: background .25s ease-in-out;
+  -webkit-transition: background .25s ease-in-out;
+}
+
+.classificadoslista-buttons ul li button:hover {
+  text-decoration: none;
+  background: #169990;
+  color: #fff;
+  border: 1px solid #169990;
+}
+
+.classificadoslista-buttons ul li button.selected {
+  text-decoration: none;
+  background: #169990;
+  color: #fff;
+  border: 1px solid #169990;
+}
+
+.thumbnail-style {
+  border-bottom: 4px solid #169990;
+  padding: 15px;
+  -webkit-box-shadow: 0 5px 8px 3px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 8px 3px rgba(0,0,0,0.1);
+  margin: 15px 0;
+}
+
+.thumbnail-date {
+  color: #169990;
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  text-align: center;
+  font-size: 1.3em;
+}
+
+.thumbnail-date hr {
+  margin: 5px 0;
+  border-color: #169990;
+}
+
+.thumbnail-date .readmore {
+  display: none;
+}
+
+.thumbnail-date .readmore a {
+  color: #169990;
+  font-weight: bold;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
+}
+
+.thumbnail-date .readmore a:hover {
+  text-decoration: none;
+  color: #000;
+}
+
+.thumbnail-style img {
+  max-width: 100%;
+  height: auto;
+}
+
+.thumbnail-style img:hover {
+  cursor: pointer;
+}
+
+.capazoom {
+  position: relative;
+
+  margin: 2%;
+  overflow: hidden;
+  width: 100%;
+}
+.capazoom img {
+  max-width: 100%;
+  height: auto;
+
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.capazoom:hover img {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.list-style {
+  border-bottom: 4px solid #169990;
+  padding: 0;
+  -webkit-box-shadow: 0 5px 8px 3px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 8px 3px rgba(0,0,0,0.1);
+  margin: 15px 0;
+}
+
+.list-style .capazoom {
+  width: 30%;
+  display: inline-block;
+}
+
+.list-style .thumbnail-date {
+  float: right;
+  width: 60%;
+  margin-right: 15px;
+  margin-top: 35px;
+  color: #000;
+  border-color: #000;
+}
+
+.list-style .thumbnail-date .readmore {
+  display: block;
+}
+/*************************/
 
 /*************************
 	CADASTRO BODY
@@ -180,6 +439,52 @@ body::after{
 .remover_campo:hover {
   color: #000;
 }
+
+/*************************
+	PAGINATION
+*********/
+.pagination {
+  font-family: roboto-condesed-regular, arial, sans-serif;
+  font-size: 1.05em;
+}
+
+.pagination>.active>a,
+.pagination>.active>a:focus,
+.pagination>.active>a:hover,
+.pagination>.active>span, .pagination>.active>span:focus,
+.pagination>.active>span:hover {
+  background-color: #169990;
+  border-color: #169990;
+  border-radius: 5px;
+}
+
+.pagination>li>a:focus,
+.pagination>li>a:hover,
+.pagination>li>span:focus,
+.pagination>li>span:hover {
+  background: #169990;
+  color: #fff;
+  border: 1px solid #169990;
+}
+
+.pagination>li>a, .pagination>li>span {
+  border: 0;
+  margin: 0 5px;
+  color: #169990;
+  border: 1px solid #169990;
+  border-radius: 5px;
+  padding: 5px 12px;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition:  .25s ease-in-out;
+}
+
+.pagination ul li:first-child span,
+.pagination>li:last-child>a, .pagination>li:last-child>span,
+.pagination>li:first-child>a, .pagination>li:first-child>span {
+  border: 0;
+  padding: 8px 10px 5px;
+}
+
 /*************************
 	NAVIGATION
 *********/
@@ -215,7 +520,8 @@ body::after{
 }
 
 .navbar {
-	min-height: 70px;
+  min-height: 70px;
+  margin-bottom: 15px !important;
 }
 
 .btn-link {
@@ -726,4 +1032,103 @@ footer{
     bottom:0;
     width:100%;
     height: 55px;
+}
+
+/*************************
+	QUERIES
+*********/
+
+/* Portrait and Landscape */
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (-webkit-min-device-pixel-ratio: 1) {
+
+  .periodselect {
+    padding: 10px 0px 0 15px;
+  }
+
+  .formitem {
+    padding: 0 14px;
+  }
+
+}
+
+/* Portrait and Landscape */
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+
+  .navbar-header img {
+    max-width: 84%;
+  }
+
+  .periodselect {
+    background: none;
+    padding: 0;
+    margin: 15px 0 30px;
+    min-height: 150px;
+  }
+
+  .periodselect .col-xs-12 {
+    padding: 0;
+  }
+
+  .formitem {
+    padding: 0;
+    border-right: 0;
+    height: auto;
+  }
+
+  .formitem select {
+    width: 85%;
+  }
+
+  .periodselect__right {
+    float: none;
+  }
+
+  .periodselect-mobile {
+    width: 100%;
+    padding: 0 0 8px;
+    border-radius: 5px;
+    text-align: center;
+    background: #F3F3F3;
+    margin-bottom: 15px;
+  }
+
+  .periodselect-mobile .form-group {
+    margin-bottom: 0;
+  }
+
+  .periodselect-mobile__smaller {
+    width: 80.6%;
+  }
+
+  .periodselect button {
+    background: #169990;
+    color: #fff;
+    margin-left: 15px;
+  }
+
+  .classificadoslista-title {
+    font-size: 1.6em;
+    padding-top: 13px;
+  }
+
+  .thumbnail-date {
+    font-size: 1em;
+  }
+
+  .list-style .thumbnail-date {
+    width: 60%;
+    margin-right: 7px;
+    margin-top: 11px;
+  }
+
+  .thumbnail-date hr {
+    margin: 2px 0;
+  }
+
 }
